wip: generate jwk